chore: fix overflow

--- a/packages/react-components/src/components/swipe-actions/swipe-actions.module.css
+++ b/packages/react-components/src/components/swipe-actions/swipe-actions.module.css
@@ -1,6 +1,6 @@
 .SwipeActions {
   position: relative;
-  /*overflow: hidden;*/
+  overflow: hidden;
   width: 100%;
 }
 
